2003-04-09  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/protocols/ftp.py (FTPClient):
	Added STOR support to FTPClient, as well as support for using
	Producers or Consumers instead of Protocols for uploading/downloading.
	* twisted/protocols/policies.py (TimeoutWrapper):
	Added a timeout policy that can be used to automatically disconnect
	inactive connections.

2003-04-07  Brian Warner  <warner@lothar.com>

	* twisted/test/test_banana.py (BananaTestCase): add Acapnotic's
	crash-cBanana test case, and some others.

	* twisted/spread/banana.py (Pynana.dataReceived): add 640k limit on
	lists/tuples, parameterize the limit into banana.SIZE_LIMIT, define
	and use BananaError on all problems. Impose 640k limit on outbound
	lists/tuples/strings to catch problems on transmit side too.

	* twisted/spread/cBanana.c (cBanana_dataReceived): check malloc()
	return values to avoid segfault from oversized lists. Impose 640k
	limit on length of incoming lists. Raise BananaError on these
	checks instead of the previously-unreachable
	cBanana.'cBanana.error' exception.

	* twisted/test/test_process.py (TwoProcessProtocol): add test to make
	sure killing one process doesn't take out a second one
	(PosixProcessTestCasePTY): add variant that sets usePTY=1

2003-04-06  Brian Warner  <warner@lothar.com>

	* twisted/trial/{unittest.py,remote.py}, twisted/test/test_trial.py:
	Collapse most reportFoo methods into a single reportResults() that
	takes a resultType parameter. This anticipates the addition of .todo
	test-case flags that will add two more resultTypes.
	* twisted/trial/unittest.py: Add .todo flags: creates EXPECTED_FAILURE
	and UNEXPECTED_SUCCESS resultTypes. Like .skip, the .todo can be
	added either to the TestCase object or as a method attribute.

2003-04-04  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/scripts/trial.py: Now takes whatever you throw at it on
	the command line, be it a filename, or a dotted python name for a