@@ -32,6 +32,7 @@ from cStringIO import StringIO
 # Twisted Imports
 from twisted.internet import interfaces
 from twisted.python import log
+from twisted.python.util import OrderedDict
 from twisted.persisted import styles
 from twisted.python.runtime import platform
 from twisted.cred.authorizer import DefaultAuthorizer
@@ -54,7 +55,7 @@ class _AbstractServiceCollection:
     def __init__(self):
         """Create an abstract service collection.
         """
-        self.services = {}
+        self.services = OrderedDict()
 
     def getServiceNamed(self, serviceName):
         """Retrieve the named service from this application.
@@ -194,6 +195,7 @@ class MultiService(_AbstractServiceCollection, ApplicationService):
         """
         ApplicationService.stopService(self)
         v = self.services.values()
+        v.reverse()
         l = [svc.stopService() for svc in v]
         # The default stopService returns None, but you can't make that part
         # of a DeferredList.
@@ -285,8 +287,8 @@ class Application(log.Logger, styles.Versioned,
         self.extraConnectors = []
         # a list of twisted.python.delay.Delayeds
         self.delayeds = []              # check
-        # a list of twisted.internet.cred.service.Services
-        self.services = {}              # check
+        # an ordered dict of ApplicationServices
+        self.services = OrderedDict()   # check
         # a cred authorizer
         a = authorizer or authorizer_
         if a:
@@ -300,7 +302,7 @@ class Application(log.Logger, styles.Versioned,
                 gid = os.getgid()
             self.gid = gid
 
-    persistenceVersion = 12
+    persistenceVersion = 13
 
     _authorizer = None
 
@@ -311,6 +313,9 @@ class Application(log.Logger, styles.Versioned,
             self._authorizer = DefaultAuthorizer()
             self._authorizer.setApplication(self)
         return self._authorizer
+
+    def upgradeToVersion13(self):
+        self.services = OrderedDict(self.services)
 
     def upgradeToVersion12(self):
         up = []
@@ -699,7 +704,9 @@ class Application(log.Logger, styles.Versioned,
 
     def _beforeShutDown(self):
         l = []
-        for service in self.services.values():
+        services = self.services.values()
+        services.reverse()
+        for service in services:
             try:
                 d = service.stopService()
                 if isinstance(d, defer.Deferred):
